# configure.in script

AC_PREREQ(2.59)
AC_INIT(Poller, 0.1, strizhov@netsec.colostate.edu)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
#AC_PROG_INSTALL
#AC_PROG_AWK
AC_PROG_LN_S
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_HEADER_TIME
AC_C_CONST
AC_C_INLINE
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h sys/time.h syslog.h unistd.h stdint.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_HEADER_STDBOOL
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset setlocale socket strerror])

# check for libraries
AC_CHECK_LIB(pthread, pthread_create,,AC_MSG_ERROR([pthread library not found!]))


#AC_MSG_CHECKING([whether libvdns installation works])
#AC_LINK_IFELSE([AC_LANG_PROGRAM([#include <string.h>
#                                 #include <stdio.h> 
#				],
#                                [fprintf(stderr, "hello\n");])
#                                ],
#                                [AC_MSG_RESULT([yes])],
#                                [AC_MSG_ERROR([no. Please specify libvdns installation prefix ])]
#				)
#



#LIBS="-lvdns $LIBS"


AC_CONFIG_FILES([Makefile])
AC_OUTPUT


